pagination and other small changes